--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "type": "module",
   "author": {
-    "name": "Hỏi Dân IT vs Eric",
-    "url": "https://hoidanit.com.vn"
+    "name": "Hồ Hoài Kiệt",
+    "url": "https://fb.com/hohoaikiet"
   },
   "scripts": {
     "dev": "vite",
@@ -15,6 +15,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.45.1",
     "bootstrap": "5.3.2",
     "react": "18.2.0",
     "react-bootstrap": "2.9.1",
