--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.45.1",
+    "@tanstack/react-query-devtools": "^5.45.1",
     "bootstrap": "5.3.2",
     "react": "18.2.0",
     "react-bootstrap": "2.9.1",
